# discord-ai-bot

./: .gitignore  LICENSE  README.md  pyproject.toml
discordLLM/: __main__.py
discordLLM/Bot/: bot.py
discordLLM/BotContainer/: BotContainer.py
discordLLM/LLMHandler/: LLMHandler.py
discord_llm/: __main__.py
discord_llm/bot/: __init__.py  bot_container.py
discord_llm/llm/: __init__.py  llm_container.py
