[tool.poetry]
name = "discordllm"
version = "0.1.0"
description = ""
authors = ["Mikeymoo5 <moodids@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
py-cord = "^2.5.0"
click = "^8.1.7"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
