[tool.poetry]
name = "discordllm"
version = "0.1.0"
description = ""
authors = ["Mikeymoo5 <moodids@outlook.com>"]
readme = "README.md"
packages = [
    { include = "discord_llm"}
]

[tool.poetry.dependencies]
python = "^3.12"
py-cord = "^2.5.0"
click = "^8.1.7"
requests = "^2.32.3"
toml = "^0.10.2"
openai = "^1.35.7"
ollama = "^0.2.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"

[tool.poetry.scripts]
discordllm = "discord_llm.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
